# gEC

./: .gitignore  CMakeLists.txt  default.frag  default.vert  include.glsl  main.cpp
Engine/: glad.c
Engine/Asset/: Asset.h  AssetManager.h  GLBuffer.h
Engine/Asset/Material/: Shader.cpp  Shader.h  ShaderManager.h  SubShader.cpp  SubShader.h
Engine/Asset/Mesh/: VAO.cpp  VAO.h
Engine/Asset/Texture/: Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  TextureCube.cpp  TextureCube.h
Engine/Component/: Component.cpp  Component.h  ComponentManager.h  Entity.cpp  Entity.h  MeshRenderer.cpp  MeshRenderer.h  Transform.cpp  Transform.h
Engine/Component/Components/: Camera.cpp  Camera.h  Component.cpp  Component.h  MeshRenderer.h  Transform.cpp  Transform.h
Engine/Component/Managers/: CameraManager.h  ComponentManager.h
Engine/Misc/: Math.h
Engine/Struct/: CameraData.h  ObjectData.h  PVRHeader.h
Engine/Windowing/: Window.cpp  Window.h
gEC/: CMakeLists.txt  default.vert  main.cpp  skybox.frag  skybox.vert
gEC/Engine/Asset/: Asset.h  AssetManager.h  GLBuffer.h
gEC/Engine/Asset/Material/: Shader.cpp  ShaderManager.cpp  SubShader.cpp  SubShader.h
gEC/Engine/Asset/Mesh/: SkyboxVAO.cpp  SkyboxVAO.h  VAO.cpp  VAO.h
gEC/Engine/Asset/Texture/: Texture.h  Texture2D.cpp  Texture2D.h  TextureCube.cpp  TextureCube.h
gEC/Engine/Component/: Entity.h
gEC/Engine/Component/Components/: Camera.cpp  Camera.h  Component.h  MeshRenderer.cpp  MeshRenderer.h  Transform.h
gEC/Engine/Component/Managers/: CameraManager.cpp  CameraManager.h  ComponentManager.h
gEC/Engine/Struct/: ObjectData.h  PVR.cpp  PVR.h
gEC/Engine/Windowing/: Window.cpp  Window.h  WindowState.h
gETF/: CMakeLists.txt  main.cpp
gETF/Struct/: Header.h  IWriteable.h  Mesh.h  Vertex.h  gETF.h
